uk.ac.manchester.gong.opl/src/uk/ac/manchester/gong/opl/javacc/actions/OPLActionsParser.java
/* Generated By:JavaCC: Do not edit this line. OPLActionsParser.java */
package uk.ac.manchester.gong.opl.javacc.actions;

import java.io.Reader;
import java.io.StringReader;
import java.util.HashSet;
import java.util.Map;
import java.util.regex.Matcher;

import org.semanticweb.owlapi.model.AddAxiom;
import org.semanticweb.owlapi.model.IRI;
import org.semanticweb.owlapi.model.OWLAnnotation;
import org.semanticweb.owlapi.model.OWLAnnotationProperty;
import org.semanticweb.owlapi.model.OWLAxiom;
import org.semanticweb.owlapi.model.OWLClass;
import org.semanticweb.owlapi.model.OWLClassExpression;
import org.semanticweb.owlapi.model.OWLDataFactory;
import org.semanticweb.owlapi.model.OWLEntity;
import org.semanticweb.owlapi.model.OWLLiteral;
import org.semanticweb.owlapi.model.OWLObjectProperty;
import org.semanticweb.owlapi.model.OWLOntology;
import org.semanticweb.owlapi.model.OWLOntologyManager;
import org.semanticweb.owlapi.model.RemoveAxiom;
import org.semanticweb.owlapi.search.EntitySearcher;

import uk.ac.manchester.gong.opl.select.SelectStatementResult;

public class OPLActionsParser implements OPLActionsParserConstants {

    public OPLActionsParser() {}

    public static void parse(String inString, Map ns2uri,
            OWLOntologyManager manager, SelectStatementResult selectResult)
            throws ParseException {
        OWLEntity owlentity = (OWLEntity) selectResult.matchedOWLObject();
        Reader reader = new StringReader(inString);
        OPLActionsParser parser = new OPLActionsParser(reader);
        parser.Input(owlentity, ns2uri, manager, selectResult);
    }

    final public void Input(OWLEntity owlentity, Map ns2uri,
            OWLOntologyManager manager, SelectStatementResult selectResult)
            throws ParseException {
        Token add = null;
        Token remove = null;
        OWLAxiom axiom = null;
        if (jj_2_1(2)) {
            add = jj_consume_token(ADD);
        } else if (jj_2_2(2)) {
            remove = jj_consume_token(REMOVE);
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
        axiom = Axiom(owlentity, ns2uri, manager, selectResult);
        jj_consume_token(0);
        if (axiom != null) {
            OWLOntology ontology = manager.getOntology(IRI.create(owlentity
                    .getIRI().getNamespace()));
            if (add != null) {
                AddAxiom addAxiom = new AddAxiom(ontology, axiom);
                manager.applyChange(addAxiom);
            } else {
                RemoveAxiom removeAxiom = new RemoveAxiom(ontology, axiom);
                manager.applyChange(removeAxiom);
            }
        }
    }

    final public OWLAxiom Axiom(OWLEntity owlentity, Map ns2uri,
            OWLOntologyManager manager, SelectStatementResult selectResult)
            throws ParseException {
        OWLAxiom axiom = null;
        if (jj_2_3(2)) {
            axiom = owlannotation(owlentity, manager);
        } else if (jj_2_4(2)) {
            axiom = owlsubclassof(owlentity, ns2uri, manager, selectResult);
        } else if (jj_2_5(2)) {
            axiom = owlequivalentclass(owlentity, ns2uri, manager, selectResult);
        } else if (jj_2_6(2)) {
            axiom = owlsubpropertyof(owlentity, ns2uri, manager, selectResult);
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
        {
            if (true) {
                return axiom;
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLAxiom owlannotation(OWLEntity owlentity,
            OWLOntologyManager manager) throws ParseException {
        Token tokenAnnotValue;
        Token tokenlang;
        jj_consume_token(Var);
        jj_consume_token(LABEL);
        tokenAnnotValue = jj_consume_token(AnnotValue);
        tokenlang = jj_consume_token(Lang);
        OWLAnnotation annot = null;
        OWLAxiom axiom = null;
        OWLDataFactory factory = manager.getOWLDataFactory();
        annot = factory.getOWLAnnotation(factory.getRDFSLabel(),
                factory.getOWLLiteral(tokenAnnotValue.image));
        axiom = factory.getOWLAnnotationAssertionAxiom(owlentity.getIRI(),
                annot);
        {
            if (true) {
                return axiom;
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLAxiom owlsubclassof(OWLEntity owlentity, Map ns2uri,
            OWLOntologyManager manager, SelectStatementResult selectResult)
            throws ParseException {
        OWLClassExpression superclass;
        jj_consume_token(Var);
        jj_consume_token(SUBCLASSOF);
        superclass = ClassDescription(owlentity, ns2uri, manager, selectResult);
        OWLAxiom axiom = null;
        OWLDataFactory factory = manager.getOWLDataFactory();
        if (superclass != null) {
            axiom = factory.getOWLSubClassOfAxiom(
                    (OWLClassExpression) owlentity, superclass);
        }
        {
            if (true) {
                return axiom;
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLAxiom owlequivalentclass(OWLEntity owlentity, Map ns2uri,
            OWLOntologyManager manager, SelectStatementResult selectResult)
            throws ParseException {
        OWLClassExpression equivalentclass;
        jj_consume_token(Var);
        jj_consume_token(EQUIVALENTTO);
        equivalentclass = ClassDescription(owlentity, ns2uri, manager,
                selectResult);
        OWLAxiom axiom = null;
        OWLDataFactory factory = manager.getOWLDataFactory();
        HashSet equivSet = new HashSet();
        equivSet.add(owlentity);
        equivSet.add(equivalentclass);
        axiom = factory.getOWLEquivalentClassesAxiom(equivSet);
        {
            if (true) {
                return axiom;
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLAxiom owlsubpropertyof(OWLEntity owlentity, Map ns2uri,
            OWLOntologyManager manager, SelectStatementResult selectResult)
            throws ParseException {
        OWLObjectProperty superproperty;
        jj_consume_token(Var);
        jj_consume_token(SUBPROPERTYOF);
        superproperty = resolvedOWLObjectProperty(owlentity, ns2uri, manager);
        OWLAxiom axiom = null;
        OWLDataFactory factory = manager.getOWLDataFactory();
        axiom = factory.getOWLSubObjectPropertyOfAxiom(
                (OWLObjectProperty) owlentity, superproperty);
        {
            if (true) {
                return axiom;
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression ClassDescription(OWLEntity owlentity,
            Map ns2uri, OWLOntologyManager manager,
            SelectStatementResult selectResult) throws ParseException {
        OWLClassExpression owldescription;
        owldescription = And(owlentity, ns2uri, manager, selectResult);
        {
            if (true) {
                return owldescription;
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression And(OWLEntity owlentity, Map ns2uri,
            OWLOntologyManager manager, SelectStatementResult selectResult)
            throws ParseException {
        OWLClassExpression description;
        OWLClassExpression totaldescription = null;
        description = Or(owlentity, ns2uri, manager, selectResult);
        totaldescription = description;
        label_1: while (true) {
            if (jj_2_7(2)) {
                ;
            } else {
                break label_1;
            }
            jj_consume_token(AND);
            description = Or(owlentity, ns2uri, manager, selectResult);
            if (totaldescription != null) {
                OWLDataFactory factory = manager.getOWLDataFactory();
                HashSet set = new HashSet();
                set.add(totaldescription);
                set.add(description);
                totaldescription = factory.getOWLObjectIntersectionOf(set);
            }
        }
        {
            if (true) {
                return totaldescription;
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression Or(OWLEntity owlentity, Map ns2uri,
            OWLOntologyManager manager, SelectStatementResult selectResult)
            throws ParseException {
        OWLClassExpression description;
        OWLClassExpression totaldescription;
        description = NonNaryBooleanDescription(owlentity, ns2uri, manager,
                selectResult);
        totaldescription = description;
        label_2: while (true) {
            if (jj_2_8(2)) {
                ;
            } else {
                break label_2;
            }
            jj_consume_token(OR);
            description = NonNaryBooleanDescription(owlentity, ns2uri, manager,
                    selectResult);
            if (totaldescription != null) {
                OWLDataFactory factory = manager.getOWLDataFactory();
                HashSet set = new HashSet();
                set.add(totaldescription);
                set.add(description);
                totaldescription = factory.getOWLObjectUnionOf(set);
            }
        }
        {
            if (true) {
                return totaldescription;
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression NonNaryBooleanDescription(
            OWLEntity owlentity, Map ns2uri, OWLOntologyManager manager,
            SelectStatementResult selectResult) throws ParseException {
        OWLClassExpression description;
        if (jj_2_9(2)) {
            description = ObjectPropertyRestriction(owlentity, ns2uri, manager,
                    selectResult);
        } else if (jj_2_10(2)) {
            description = Not(owlentity, ns2uri, manager, selectResult);
        } else if (jj_2_11(2)) {
            description = NamedClassOrNestedDescription(owlentity, ns2uri,
                    manager, selectResult);
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
        {
            if (true) {
                return description;
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression Not(OWLEntity owlentity, Map ns2uri,
            OWLOntologyManager manager, SelectStatementResult selectResult)
            throws ParseException {
        OWLClassExpression description;
        jj_consume_token(NOT);
        description = NamedClassOrNestedDescription(owlentity, ns2uri, manager,
                selectResult);
        OWLDataFactory factory = manager.getOWLDataFactory();
        if (description != null) {
            description = factory.getOWLObjectComplementOf(description);
        }
        {
            if (true) {
                return description;
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression ObjectPropertyRestriction(
            OWLEntity owlentity, Map ns2uri, OWLOntologyManager manager,
            SelectStatementResult selectResult) throws ParseException {
        OWLClassExpression description;
        if (jj_2_12(2)) {
            description = OWLObjectSomeRestriction(owlentity, ns2uri, manager,
                    selectResult);
        } else if (jj_2_13(2)) {
            description = OWLObjectAllRestriction(owlentity, ns2uri, manager,
                    selectResult);
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
        {
            if (true) {
                return description;
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression OWLObjectAllRestriction(
            OWLEntity owlentity, Map ns2uri, OWLOntologyManager manager,
            SelectStatementResult selectResult) throws ParseException {
        OWLClassExpression description = null;
        OWLObjectProperty property;
        OWLClassExpression filler;
        property = resolvedOWLObjectProperty(owlentity, ns2uri, manager);
        jj_consume_token(ALL);
        filler = NamedClassOrNestedDescription(owlentity, ns2uri, manager,
                selectResult);
        OWLDataFactory factory = manager.getOWLDataFactory();
        if (filler != null) {
            description = factory.getOWLObjectAllValuesFrom(property, filler);
        }
        {
            if (true) {
                return description;
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression OWLObjectSomeRestriction(
            OWLEntity owlentity, Map ns2uri, OWLOntologyManager manager,
            SelectStatementResult selectResult) throws ParseException {
        OWLClassExpression description = null;
        OWLObjectProperty property;
        OWLClassExpression filler;
        property = resolvedOWLObjectProperty(owlentity, ns2uri, manager);
        jj_consume_token(SOME);
        filler = NamedClassOrNestedDescription(owlentity, ns2uri, manager,
                selectResult);
        OWLDataFactory factory = manager.getOWLDataFactory();
        if (filler != null) {
            description = factory.getOWLObjectSomeValuesFrom(property, filler);
        }
        {
            if (true) {
                return description;
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression NamedClassOrNestedDescription(
            OWLEntity owlentity, Map ns2uri, OWLOntologyManager manager,
            SelectStatementResult selectResult) throws ParseException {
        OWLClassExpression description;
        if (jj_2_14(2)) {
            description = owlresolvedclass(owlentity, ns2uri, manager,
                    selectResult);
        } else if (jj_2_15(2)) {
            description = NestedClassDescription(owlentity, ns2uri, manager,
                    selectResult);
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
        {
            if (true) {
                return description;
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression NestedClassDescription(OWLEntity owlentity,
            Map ns2uri, OWLOntologyManager manager,
            SelectStatementResult selectResult) throws ParseException {
        OWLClassExpression description;
        jj_consume_token(LeftPar);
        description = ClassDescription(owlentity, ns2uri, manager, selectResult);
        jj_consume_token(RightPar);
        {
            if (true) {
                return description;
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression owlresolvedclass(OWLEntity owlentity,
            Map<String, IRI> ns2uri, OWLOntologyManager manager,
            SelectStatementResult selectResult) throws ParseException {
        Token nonresolvedclass = null;
        Token nonresolvedgroup = null;
        Token owllabelnamedobject = null;
        Token labelgroup = null;
        OWLClassExpression description = null;
        if (jj_2_16(2)) {
            nonresolvedclass = jj_consume_token(OWLNamedObject);
        } else if (jj_2_17(2)) {
            nonresolvedgroup = jj_consume_token(Group);
        } else if (jj_2_18(2)) {
            owllabelnamedobject = jj_consume_token(OWLLABELNamedObject);
        } else if (jj_2_19(2)) {
            labelgroup = jj_consume_token(LABELGroup);
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
        OWLDataFactory factory = manager.getOWLDataFactory();
        if (nonresolvedgroup != null) {
            String NS = nonresolvedgroup.image.split(":")[0];
            IRI nsURI = ns2uri.get(NS);
            if (nsURI != null) {
                int groupnumber = Integer.parseInt(nonresolvedgroup.image
                        .split("RG")[1].substring(0, 1));
                Matcher matcher = selectResult.regexpmatcher();
                String ClassName = getGroupContent(matcher, groupnumber);
                IRI ClassURI = IRI.create(nsURI + "#" + ClassName);
                description = factory.getOWLClass(ClassURI);
            }
            // description=
            // (OWLClassExpression)factory.getOWLClass(URI.create("http://www.gong.manchester.ac.uk/opl.owl#spain"));
        } else if (owllabelnamedobject != null) {
            String NS = owllabelnamedobject.image.split(":")[0];
            IRI nsURI = ns2uri.get(NS);
            if (nsURI != null) {
                // description=
                // (OWLClassExpression)factory.getOWLClass(URI.create("http://www.gong.manchester.ac.uk/opl.owl#spain"));
                String label = owllabelnamedobject.image.split("<LABEL>")[1];
                OWLOntology ontology = manager.getOntology(nsURI);
                description = getClassByLabel(ontology, label);
            }
        } else if (labelgroup != null) {
            String NS = labelgroup.image.split(":")[0];
            IRI nsURI = ns2uri.get(NS);
            if (nsURI != null) {
                String group = labelgroup.image.split("<LABEL>")[1];
                int groupnumber = Integer.parseInt(group.split("RG")[1]
                        .substring(0, 1));
                Matcher matcher = selectResult.regexpmatcher();
                String ClassName = getGroupContent(matcher, groupnumber);
                OWLOntology ontology = manager.getOntology(nsURI);
                description = getClassByLabel(ontology, ClassName);
            }
        } else {
            String NS = nonresolvedclass.image.split(":")[0];
            IRI nsURI = ns2uri.get(NS);
            if (nsURI != null) {
                String ClassName = nonresolvedclass.image.split(":")[1];
                IRI ClassURI = IRI.create(nsURI + "#" + ClassName);
                description = factory.getOWLClass(ClassURI);
            }
        }
        {
            if (true) {
                return description;
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLObjectProperty resolvedOWLObjectProperty(
            OWLEntity owlentity, Map<String, IRI> ns2uri,
            OWLOntologyManager manager) throws ParseException {
        Token nonresolvedproperty;
        OWLObjectProperty property = null;
        nonresolvedproperty = jj_consume_token(OWLNamedObject);
        String NS = nonresolvedproperty.image.split(":")[0];
        IRI nsURI = ns2uri.get(NS);
        if (nsURI != null) {
            String PropName = nonresolvedproperty.image.split(":")[1];
            IRI PropURI = IRI.create(nsURI + "#" + PropName);
            OWLDataFactory factory = manager.getOWLDataFactory();
            property = factory.getOWLObjectProperty(PropURI);
        }
        {
            if (true) {
                return property;
            }
        }
        throw new Error("Missing return statement in function");
    }
